# urilibplus-python

./: README.md  build-and-release.bat  pyproject.toml  requirements.txt
docs/: characters.html  index.html  tools.html  typings.html  uri.html  uri_path.html  uri_query.html
docs/tests/: index.html  module_tests.html  tools_tests.html
reports/: COVERAGE.md  UNITTEST.txt
urilibplus/: __init__.py  characters.py  tools.py  typings.py  uri.py  uri_path.py  uri_query.py
urilibplus/tests/: __init__.py  __main__.py  module_tests.py  tools_tests.py
