# pyproject.toml for the urilibplus Python module
# THX https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#entry-points
# THX https://pypi.org/project/validate-pyproject/

[project]
    dynamic = ["readme", "version"]
    name = "urilibplus"
    description = "A Python module providing advanced tools for URI manipulation and validation. Simplifies handling and parsing of URIs, with a focus on robustness and ease of use."
    authors = [{ name = "Markus Hammer", email = "107761433+MarkusHammer@users.noreply.github.com" }]
    license = { file = "LICENSE" }
    dependencies = ["typing_extensions<=3.10"]
    requires-python = ">=3.7"
    classifiers = [
        "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Typing :: Typed",
        "Natural Language :: English",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Software Development",
        "Topic :: Utilities",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11"
    ]
    keywords = [
        "uri",
        "url",
        "http",
        "https",
        "path manipulation",
        "uri parsing",
        "url validation",
        "web development",
        "networking",
        "internet"
    ]
    [project.optional-dependencies]
        dev = ["setuptools>=64.0.0", "pip-tools", "validate-pyproject[all]", "build", "twine", "coverage", "pdoc3", "pyright", "pylint"]
    [project.urls]
        Homepage = "https://github.com/MarkusHammer/urilibplus-python"
        Documentation = "https://MarkusHammer.gthub.io/urilibplus-python"
        Github  = "https://github.com/MarkusHammer/urilibplus-python"
        Issues = "https://github.com/MarkusHammer/urilibplus-python/issues"
        "Pull Requests" = "https://github.com/MarkusHammer/urilibplus-python/pulls"
        Git = "https://github.com/MarkusHammer/urilibplus-python.git"

[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[tool.setuptools]
    zip-safe = true
    [tool.setuptools.dynamic]
        version = {attr = "urilibplus.__version__"}
        readme = {file = ["README.md", "SECURITY.md", "LICENSE"], content-type = "text/markdown"}
    [tool.setuptools.packages.find]
        where = ["."]
        include = ["urilibplus*"]
        exclude = ["urilibplus.tests*"]
        namespaces = false

[tool.coverage.run]
    data_file = "./reports/.coverage"
[tool.coverage.report]
    ignore_errors = true
    skip_empty = true
    precision = 4
    omit=["**/tests/**"]
    exclude_lines = [
        "^\\s*continue\\b",
        "^\\s*return\\b",
        "^\\s*raise\\b",
        "^\\s*except\\b",
        "^\\s*warnings\\.warn\\(",
        "^\\s*warn\\(",
    ]

[tool.pylint.'MESSAGES CONTROL']
    disable="no-else-return,too-many-arguments,too-many-branches,too-many-return-statements,too-many-instance-attributes,too-few-public-methods"

[tool.pyright]
    typeCheckingMode="standard"
